# congress-legislators

./: .dockerignore  .gitignore  Justfile  pyproject.toml
.github/workflows/: release.yml
infra/azure/: Dockerfile  requirements-job.txt
statt/: load_committee_members.py  load_committees.py  run_daily_committee_pipeline.py  update_us_federal_legislators.py
