[project]
name = "congress-legislators"
version = "0.1.0"
description = "Scripts to update legislators data"
requires-python = ">=3.12"
dependencies = [
    "pyyaml",
    "rtyaml",
    "scrapelib==0.10.1",
    "ipython",
    "lxml>=2.2",
    "cssselect",
    "pyflakes",
    "pytz",
    "tweepy",
    "sparqlwrapper",
    "feedsearch",
    "feedfinder2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "psycopg2-binary>=2.9.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
